# portfolio

./: Dockerfile  asgi.py  fly.toml  pyproject.toml  teststack.toml
app/: __init__.py  bastards.py  characters.py  config.py
app/bastards/: __init__.py  characters.py
app/bastards/data/: spells.py
app/bastards/html/: index.html
app/bastards/static/: index.html  sheet.js  template.html
app/bastards/utils/: spells.py  types.py
app/data/: classes.py  items.py  spells.py
app/handlers/v1/: bastards.py  characters.py
app/html/: bastards.html
app/static/: create.css  sheet.js
app/templates/: bastards.html
app/templating/: README.rst  __init__.py  bastards.html
app/utils/: types.py
files/: run-server.sh
